// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form Actions should render center aligned actions defined in action schema 1`] = `
.c3 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  letter-spacing: 0rem;
  line-height: 2.6rem;
  text-align: initial;
  display: inline-block;
}

.c1 {
  border: none;
  position: relative;
  user-select: none;
  font-family: inherit;
  text-decoration: none;
  transition: all 100ms ease-out;
  padding: 1rem 2.4rem 1.2rem;
  border-radius: 0.8rem;
  display: inline-flex;
  justify-content: center;
  align-items: center;
}

.c1:hover {
  cursor: pointer;
}

.c1:focus {
  outline: none;
}

.c1:disabled {
  cursor: not-allowed;
}

.c1:disabled {
  color: #98A7B7;
  background: #dfe4e9;
}

.c1:not(:disabled):not(:hover) {
  color: #ffffff;
  background: #3872D2;
}

.c1:not(:disabled):active {
  color: #ffffff;
  background: #275093;
}

.c1:not(:disabled):not(:active):hover {
  color: #ffffff;
  background: #3061B3;
  box-shadow: 0 0.2rem 0.8rem rgba(48,97,179,0.35);
}

.c1 .sc-1pf3x8a-0+.c2 {
  margin-left: 0.8rem;
}

.c1 .c2+.sc-1pf3x8a-0 {
  margin-left: 0.8rem;
}

.c0 {
  display: flex;
  grid-column: 1/-1;
  margin-top: 1.6rem;
  flex-direction: column;
  justify-content: center;
}

.c0>*+* {
  margin-top: 1.6rem;
}

<div>
  <div
    alignitems="center"
    class="c0"
    flexdirection="column"
  >
    <button
      class="c1"
      disabled=""
      edges="square"
      form="dummy"
      type="submit"
      variant="solid"
    >
      <span
        class="c2 c3"
        textalign="initial"
        textcolor="inherit"
        textvariant="button1"
      >
        Submit
      </span>
    </button>
  </div>
</div>
`;

exports[`Form Actions should render default action button 1`] = `
.c3 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  letter-spacing: 0rem;
  line-height: 2.6rem;
  text-align: initial;
  display: inline-block;
}

.c1 {
  border: none;
  position: relative;
  user-select: none;
  font-family: inherit;
  text-decoration: none;
  transition: all 100ms ease-out;
  padding: 1rem 2.4rem 1.2rem;
  border-radius: 100rem;
  display: inline-flex;
  justify-content: center;
  align-items: center;
}

.c1:hover {
  cursor: pointer;
}

.c1:focus {
  outline: none;
}

.c1:disabled {
  cursor: not-allowed;
}

.c1:disabled {
  color: #98A7B7;
  background: #dfe4e9;
}

.c1:not(:disabled):not(:hover) {
  color: #ffffff;
  background: #3872D2;
}

.c1:not(:disabled):active {
  color: #ffffff;
  background: #275093;
}

.c1:not(:disabled):not(:active):hover {
  color: #ffffff;
  background: #3061B3;
  box-shadow: 0 0.2rem 0.8rem rgba(48,97,179,0.35);
}

.c1 .sc-1pf3x8a-0+.c2 {
  margin-left: 0.8rem;
}

.c1 .c2+.sc-1pf3x8a-0 {
  margin-left: 0.8rem;
}

.c0 {
  display: flex;
  grid-column: 1/-1;
  margin-top: 1.6rem;
  flex-direction: row;
  justify-content: flex-end;
}

.c0>*+* {
  margin-left: 1.6rem;
}

<div>
  <div
    class="c0"
    flexdirection="row"
  >
    <button
      class="c1"
      disabled=""
      edges="rounded"
      form="dummy"
      type="submit"
      variant="solid"
    >
      <span
        class="c2 c3"
        textalign="initial"
        textcolor="inherit"
        textvariant="button1"
      >
        Save
      </span>
    </button>
  </div>
</div>
`;

exports[`Form Actions should render left aligned actions defined in action schema 1`] = `
.c3 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  letter-spacing: 0rem;
  line-height: 2.6rem;
  text-align: initial;
  display: inline-block;
}

.c1 {
  border: none;
  position: relative;
  user-select: none;
  font-family: inherit;
  text-decoration: none;
  transition: all 100ms ease-out;
  padding: 1rem 2.4rem 1.2rem;
  border-radius: 0.8rem;
  display: inline-flex;
  justify-content: center;
  align-items: center;
}

.c1:hover {
  cursor: pointer;
}

.c1:focus {
  outline: none;
}

.c1:disabled {
  cursor: not-allowed;
}

.c1:disabled {
  color: #98A7B7;
  background: #dfe4e9;
}

.c1:not(:disabled):not(:hover) {
  color: #ffffff;
  background: #3872D2;
}

.c1:not(:disabled):active {
  color: #ffffff;
  background: #275093;
}

.c1:not(:disabled):not(:active):hover {
  color: #ffffff;
  background: #3061B3;
  box-shadow: 0 0.2rem 0.8rem rgba(48,97,179,0.35);
}

.c1 .sc-1pf3x8a-0+.c2 {
  margin-left: 0.8rem;
}

.c1 .c2+.sc-1pf3x8a-0 {
  margin-left: 0.8rem;
}

.c0 {
  display: flex;
  grid-column: 1/-1;
  margin-top: 1.6rem;
  flex-direction: row;
  justify-content: flex-start;
}

.c0>*+* {
  margin-left: 1.6rem;
}

<div>
  <div
    alignitems="left"
    class="c0"
    flexdirection="row"
  >
    <button
      class="c1"
      disabled=""
      edges="square"
      form="dummy"
      type="submit"
      variant="solid"
    >
      <span
        class="c2 c3"
        textalign="initial"
        textcolor="inherit"
        textvariant="button1"
      >
        Submit
      </span>
    </button>
  </div>
</div>
`;
